agregando y eliminando de la lista, guardando data en service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,3 @@
-<h1>{{title}}</h1>
-
-<h3>{{contador}}</h3>
-<button (click)='incremento()'>+</button><button (click)='decremento()'>-</button>
 
 <app-dbz-main-page></app-dbz-main-page>
-
-<!-- <app-hero></app-hero>
-<app-hero-list></app-hero-list>
-<router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
